<resources>
    <string name="app_name">ProjectManager</string>
    <string name="ajouteremploye">Ajouter un employé</string>
    <string name="ajouterprojetemploye">Ajouter un projet à l\'employé</string>
    <string name="ajouterprojetemploye_list">Ajouter le projet à l\'employé</string>
    <string name="listeemploye">Liste des employés</string>
    <string name="listeeprojetsemploye">Liste des projets de </string>
    <string name="confirmersupression">Confirmer la supression</string>
    <string name="confirmerajout">Confirmer l\'ajout</string>
    <string name="annuler">Annuler</string>
    <string name="encours">En cours </string>
    <string name="completes">Completés</string>
    <string name="marquercompleted"><u>Marquer le projet comme complété</u></string>
    <string name="remettreactif"><u>Remettre le projet actif</u></string>
    <string name="textlisteemployessurprojet">Liste des employés sur le projet</string>
    <string name="textnomduprojet">Nom du projet</string>
    <string name="textnomduclient">Client</string>
    <string name="textdatedealine">Date du deadline</string>
    <string name="textnomemployeeaajouter">Nom de l\'employé à ajouter</string>
    <string name="textRoleemployeeaajouter">Occupation / Role de l\'employé</string>
    <string name="textNoEmployeeaajouter">Numéro de l\'employé</string>
    <string name="priorite">Priorité du projet</string>
    <string name="elevé">Elevé</string>
    <string name="normal">Normal</string>
    <string name="bas">Bas</string>


</resources>